# image-to-tetris

./: .gitignore  Cargo.toml  README.md
python/: .gitignore  download_tetris_sound_effects.py  graph.py  graph_fft.py
src/: approx.rs  approx_audio.rs  approx_image.rs  approx_video.rs  board.rs  cli.rs  draw.rs  genetic.rs  integration_test.rs  main.rs  piece.rs  score.rs  test_many.rs  tetris.rs  utils.rs
src/approx_audio/: audio_clip.rs  fft.rs  onset_detect.rs  pitch.rs  resample.rs  score.rs  tetris_clips.rs  windowing.rs
src/approx_image/: board.rs  draw.rs  integration_test.rs  piece.rs
test_videos/: blank_video.mkv
