[package]
name = "image-to-tetris"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
dssim = "3.3.2"
dssim-core = "3.2.10"
ffmpeg-next = "7.0.2"
image = "0.25.1"
image-compare = "0.4.1"
imageproc = "0.25.0"
indicatif = "0.17.8"
itertools = "0.13.0"
rand = "0.8.5"
rayon = "1.10.0"
rgb = "0.8.44"
