[package]
name = "image-to-tetris"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
dssim = "3.3.2"
dssim-core = "3.2.10"
ffmpeg-next = "7.0.2"
fundsp = "0.18.2"
hound = "3.5.1"
image = "0.25.1"
image-compare = "0.4.1"
imageproc = "0.25.0"
indicatif = "0.17.8"
itertools = "0.13.0"
median = "0.3.2"
ordered-float = "4.2.2"
rand = "0.8.5"
rayon = "1.10.0"
rgb = "0.8.44"
rust-lapper = "1.1.0"
rustfft = "6.2.0"
symphonia = "0.5.4"
thiserror = "1.0.63"
